[package]
name = "the_stream"
version = "0.1.1"
edition = "2018"

[dependencies]
borsh = "0.9.1"
num-traits = "0.2"
num_enum = "0.5.4"
arrayref = "0.3.6"
num-derive = "0.3"
solana-program = "1.7.11 "
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.7.1"
solana-client = "1.7.1"
solana-sdk = "1.7.1"

[lib]
crate-type = ["cdylib", "lib"]
