[package]
name = "zebec"
version = "2.1.1"
edition = "2021"

[dependencies]
borsh = "~0.9.1"
num-derive = "~0.3"
num-traits = "~0.2"
arrayref = "~0.3.6"
solana-program = "~1.10.0"
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
thiserror = "~1.0"
spl-associated-token-account ={ version = "1.0.3", features = [ "no-entrypoint" ] }


[dev-dependencies]
# solana-program-test = "1.7.1"
# solana-client = "1.7.1"
# solana-sdk = "1.7.1"

[lib]
crate-type = ["cdylib", "lib"]